# carplay-client

./: .gitignore  Cargo.toml  README.md  notes
src/: input_layer.rs  link_layer.rs  main.rs  player_layer.rs
src/link_layer/: box_protocol.rs
